--- a/pages/p5/953054.md
+++ b/pages/p5/953054.md
@@ -1,4 +1,4 @@
-### 中国消费的残酷真相：不会有报复性消费了(组图)
+### 孙大午近乎免费办医破坏了谁的“生产经营”？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="消费 奢侈品 GDP" src="https://img2.secretchina.com/pic/2019/10-28/p2550182a119753157-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img src="https://img3.secretchina.com/pic/2020/11-19/p2821181a490603474-ss.jpg"/>
   <br>
-   这两年出现是否消费降级的讨论。（图片来源：Getty Images）
+   大午集团旗下的大午医院。（图片来源：网络图片）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,60 +21,46 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月27日讯】今年的
+  【看中国2020年11月19日讯】从11月11日开始，
   <strong>
-   奢侈品
-  </strong>
-  市场，在整体
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/消费" target="_blank">
-    消费
+   <span href="https://www.secretchina.com/news/gb/tag/孙大午" target="_blank">
+    孙大午
    </span>
   </strong>
-  都低迷的大环境中，显得特别亮眼。一线大牌纷纷提价，专卖店限流，门口排了很长的队，和门可罗雀的很多品牌形成鲜明对比。想必很多读者都看过这样的报道，或者有亲身体会。一些观点认为奢侈品卖得好，主要是消费升级。
+  的名字开始刷屏网络。当天，中国五百大
+  <strong>
+   民营企业
+  </strong>
+  之一的大午集团创始人孙大午，与二十多名公司高管，突然被当地警方武装抓捕，罪名是“寻衅滋事”和“破坏生产经营”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  消费升级这个概念并不陌生，前几年在讨论
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%B6%88%E8%B4%B9" target="_blank">
-   消费
-  </span>
-  的时候，就经常提到它。
+  <strong>
+   特警全副武装实施抓捕，工作组进驻大午进行控制
+  </strong>
  </p>
  <p>
-  支撑这个观点的一个重要论据是，国际经验显示人均
-  <span href="https://zh.wikipedia.org/zh-cn/GDP" target="_blank">
-   GDP
-  </span>
-  超过8000美元时，就会进入消费升级阶段。
+  《南方周末》引述大午集团一名匿名员工的话描述，11日凌晨1点左右，六辆大巴载着手持冲锋枪、牵着警犬和带着梯子的特警，闯入河北保定徐水区高林村镇郎五庄村的大午新民居。这是大午集团的自建小区，“居住着许多大午员工”。
  </p>
  <p>
-  2018年开始，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  媒体消费升级就提得少了。因为当年上半年社会消费品零售总额增速从维持多年的两位数降到了8%，拼多多的快速崛起和上市甚至引起了是否出现消费降级的讨论。
+  《南方周末》说，警察第一批带走了孙大午夫妇二人、他们的两个儿子和两个儿媳以及其他高管；第二批带走了子公司的领导人。孙大午一个年幼的孙子被留在家中，警察负责看管并且不让保姆靠近。
  </p>
  <p>
-  如果不是今年
-  <span href="https://zh.wikipedia.org/zh-cn/%E5%A5%A2%E4%BE%88%E5%93%81" target="_blank">
-   奢侈品
-  </span>
-  卖得好，可能消费升级这个词也不会再度引起很多人的关注。
+  那名受访的匿名员工询问警察，为什么把领导带走？对方回答：等通知。该员工说，他“留意到，有的家门有被强行撬开的痕迹”。他还了解到，凌晨抓捕行动时，附近通讯信号被屏蔽，“直到人被警方抓走之后才恢复”。
  </p>
  <p>
-  但与此同时，我们又确实看到，疫后经济复苏阶段，消费又是恢复最慢的。固定资产投资和出口早已经恢复到疫情前的水平了，社会消费品零售总额到8月才开始转正。
+  在湖北的张先生是大午集团旗下负责酒类推广的人员。他告诉美国之音，目前关于集团的消息他也得不到，只能在网上看，“我@过大午旗下酒业公司人员，无人回复”，估计“被封口了”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,11 +75,7 @@
   </div>
  </center>
  <p>
-  看待这种消费分化，我们认为不能简单套用国际经验，认为人均
-  <span href="https://www.secretchina.com/news/gb/tag/GDP" target="_blank">
-   GDP
-  </span>
-  突破8000美元就会出现总量层面的消费升级。有以下两个原因：
+  杜先生也是大午集团在外地的产品推广者。他告诉美国之音，有关方面“完全不许他评论孙大午案”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +90,7 @@
   </div>
  </center>
  <p>
-  第一，人均GDP是有名义和实际之分的，用不同年份美元所核算的人均GDP差异很大。考虑到这个因素后，人均名义GDP8000美元和消费升级没有必然联系。
+  《红星新闻》称，三天后，大午集团保卫处一名员工告知，孙大午等人被抓捕之后，政府工作组已经进驻了大午集团旗下的大午医院、大午学校等机构；大午集团和旗下各子公司的人力资源处、财务处也已经被警方控制。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +105,7 @@
   </div>
  </center>
  <p>
-  第二，GDP在不同国家内部的分配是不一样的，居民部门可支配收入占GDP比例在不同国家分化很大，高的如埃及2015年达到了85.3%，低的如冰岛2014年只有45.5%。因此即使名义人均GDP相同，不同国家的居民实际购买力也会大相径庭。
+  对此，署名“王昊轩”的网评人士称，政府进驻大午集团“是一个令人震惊的消息”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +120,7 @@
   </div>
  </center>
  <p>
-  从增长放缓后必然出现分化，来解释更为合理。经济高速增长时期，大家都能分得一杯羹，但是当经济增速中枢下移后，新增的盘子小了，竞争自然会变得激烈，市场份额如此，收入分配也是如此。再加上资产和债务分布的不均衡，最终导致的结果就是消费分级，高端商品和低端商品都有自己的忠实拥趸。
+  另有网友评论，大午集团被强行接管，“或开危险先例”；就算股东有法律纠纷，与公司也应该是渭泾分明的，“即便为了大午集团的发展，政府也不宜接管，哪怕是接管业务也不应该”；而且，“以涉嫌寻衅滋事和破坏生产经营罪，将公司高管‘连锅端’，不仅在河北省罕见，在全国也罕见”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +136,7 @@
  </center>
  <p>
   <strong>
-   不断下滑的消费增速
+   孙大午本次是“二进宫”
   </strong>
  </p>
  <center>
@@ -170,7 +152,7 @@
   </div>
  </center>
  <p>
-  消费包括两部分，一个是实物性商品消费，中国国家统计局公布的月度数据社会消费品零售总额，统计的就是实物性消费。另一个是服务消费，目前还没有很好的指标来衡量，考虑到服务不像实物商品那样可以储存，它的生产基本对应着即时的消费需求，因此我们这里用服务业生产指数同比来衡量服务消费的变化。这个指标公布的时间比较短，2016年12月才开始有，但也能满足我们的研究需要了。
+  11月11日7点，河北省高碑店市公安局官方微信公众号发布消息称：“经侦查，河北大午农牧集团有限公司孙大午等人涉嫌寻衅滋事、破坏生产经营等违法犯罪。2020年11月11日，公安机关依法对孙大午等人采取了刑事强制措施。目前，案件正在侦办中。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,7 +167,7 @@
   </div>
  </center>
  <p>
-  疫情把今年绝大部分的经济数据砸出了一个大坑，消费数据也是如此。为了方便观察数据的波动，暂时先不考虑2020年的情况。
+  中国流亡律师滕彪告诉美国之音，寻衅滋事是中国刑法里的口袋罪，经常用来对付维权人士和异议人士；其定义模糊，很多不构成犯罪的行为，都会放到这个罪名里。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +182,7 @@
   </div>
  </center>
  <p>
-  实物性商品消费方面，可以看到2017年年初开始，社会消费品零售总额名义增速就一路走低，剔除价格因素后，实际增速下滑得更快。
+  署名“沅湘”的网评人说，孙大午“这样的企业家，要不是这次被抓，很多人都还不知道吧”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -215,7 +197,7 @@
   </div>
  </center>
  <p>
-  服务消费方面，也是这样，只不过时间稍晚一点，2018年开始下滑的。
+  与孙大午相熟并经常联系的企业家、民权活动人士王应国告诉美国之音，本次警方的行动源于孙大午所在的郎五庄村与徐水国营农场的土地纠纷。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,7 +212,7 @@
   </div>
  </center>
  <p>
-  除了客观的消费增速外，也有偏主观的统计指标，显示居民消费意愿在下滑。比如由中国国家统计局发布的月度指标——消费者信心指数消费意愿分项，也在2019年年初见顶。
+  王应国说：“事实上是郎五庄村与徐水国营农场之间有土地纠纷。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,7 +227,7 @@
   </div>
  </center>
  <p>
-  2020年疫情突如其来，相比于固定资产投资和出口，消费恢复的速度要慢得多，也是二季度GDP最主要的拖累。这一方面确实和出于对疫情的担忧而减少在外消费有关，但它也能说明居民的消费意愿并不强，毕竟很多商品消费是可以从线下转到网上的，但我们并没有看到实物商品网上零售的大幅回升，去掉疫情造成的深“V”，最新数据实际上还处于有统计以来的低点。
+  公开信息显示，1963年，郎五庄村曾将740亩土地交由徐水国营农场耕种。实际上，后者占用的土地超过2000亩。为了土地确权，双方数年争执不下。后来，郎五庄村把土地租给了大午种植业公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,22 +242,7 @@
   </div>
  </center>
  <p>
-  种种迹象表明，2018年以来中国的消费并不强劲，并没有出现之前预期的消费升级所带来的消费增速回升。疫情又让消费变得更加乏力，目前还在拖累经济恢复。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="消费 奢侈品 GDP" src="https://img3.secretchina.com/pic/2020/6-12/p2710192a518993148-ss.jpg" style="height:337px; width:600px"/>
+  今年6月21日和8月4日，大午集团人员与徐水国营农场人员先后发生了两次冲突。第二次冲突中，徐水区公安介入，并与大午集团员工发生肢体冲突。这就是“6．21事件”和“8．4事件”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,9 +257,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   M型社会和消费分级
-  </strong>
+  “博讯”说，8月4日凌晨，徐水国营农场人员意图擅自拆除大午集团位于郎五庄村的办公室，大午员工阻止，双方发生冲突。徐水区公安介入，数十位大午工人及村民受伤。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -307,11 +272,71 @@
   </div>
  </center>
  <p>
-  日本趋势专家大前研一在他的著作《M型社会：中产阶级消失的危机与商机》里，描述了日本社会由原来以中产阶级为主流，转变为富裕和贫穷两个极端，中产阶级逐渐消失的事实。M型社会的两端，正如哑铃的两端一样，改变了市场商机和营销法则，高端
-  <span href="https://www.secretchina.com/news/gb/tag/奢侈品" target="_blank">
-   奢侈品
+  此后，孙大午接受采访说，公安明显偏袒徐水国营农场，“认定他们是国家的，其实他们是以国家名义谋个人私利的团伙”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国说，事实上，孙大午是在居中调解；但是，“就算孙大午本人有土地纠纷，也不过是经济纠纷，上升不到刑事犯罪层面”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国表示，就在不久前视频联系时，他还特意劝说孙大午，“我主要劝他停止所有扩大再生产，低调低调再低调。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国对美国之音说，孙大午这些年发展态势很猛，已经成了独立王国；他的体育馆可以容纳两万人，大午医院至少有16层，大理石装修，很豪华；郎五庄村的村民和大午集团职工每月只要交一元钱，看病不花钱，做个B超和验血的全套体检只要10元……这些受人欢迎的福利冲击到地方政府的权威。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国还透露，孙大午在微信朋友圈发的文章都围绕民主理念。而且，包括
+  <span href="https://www.secretchina.com/news/gb/tag/任志强" target="_blank">
+   任志强
   </span>
-  和大众化品牌，都成为众多营销者的关注对象。
+  、胡德华等这些人经常到孙大午的温泉酒店相聚，这是他的休闲度假山庄。可想而知，他们会一起私下聊天，这在当局眼里肯定是不能容忍的，甚至是会被视为反党的。尽管当局找不到证据，但是，会想办法把可能性扼杀在萌芽状态。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -326,7 +351,7 @@
   </div>
  </center>
  <p>
-  除了日本外，美国、香港和台湾等地，都已步入M型社会。在M型社会里，面向占社会少数的富人群体的奢侈品，以及面向占社会大多数的中低收入人群的大众化品牌，都有自己的坚实拥趸。
+  滕彪律师说：“刑法里有重要一条，就是行为要有社会危害性，才构成犯罪……然而，几乎所有政治犯和良心犯的案件、维权人士被判刑的案件，都是把一些言论和人权活动称为寻衅滋事。事实上，他们对社会没有任何危害，甚至还推动社会的法制和人权进步。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,232 +366,7 @@
   </div>
  </center>
  <p>
-  其实最近几年，中国消费在整体增速下滑的同时，也开始出现分化。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  先来看房价和房租这对反映购买力分化的指标。中国购房时的高首付比例，对购房者的现金类资产规模有一定要求，尤其是在房价较高的一、二线城市。房价变动并不是一个很好的反映消费能力变化的指标，因为房价涨到一定水平的时候，会反过来压制消费。但可以用它来衡量居民购买力，毕竟在付首付的时候，是需要拿出实实在在的钱的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  房租变化则可以反映租房者的购买力，尽管有很多特例，但从平均意义上讲，购买人群拥有的资产规模要大于租房的人群。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  数据显示，2018年至今，各城市中住宅价格同比上涨城市的占比，要远大于房租同比上涨城市的占比，前者多数月份在85%以上，而后者大部分时间都在30%以下。也就是说房价同比上涨的城市，要远多于房租同比上涨的城市，不同资产规模人群的购买力出现了明显分化。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  购买力的分化，直接体现在消费上，一些高端消费品的表现好于这种消费品的整体。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一是看大件可选消费——汽车。2018年二季度至今，多数月份的汽车销量同比是负增长的，市场各方对此也进行了很多讨论。但是我们看到，相同时期以BBA，即奔驰、宝马和奥迪衡量的豪华车销量同比增速，大部分时间都在两位数，销售情况要比汽车行业整体好得多。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  二是和整体消费低迷相对的是，皮包等奢侈品的价格今年逆势大幅上涨，以LV、Chanel和Gucci为首的奢侈品牌掀起了涨价潮。根据胡润百富杂志的统计，路易威登Speedy皮包2019年的价格为10900元，而各种型号的Speedy包最新价格在13100元左右，今年涨幅达到了20.2%。Chanel经典款女包的年内涨幅更大，达到了28.4%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  和高端消费品销售火爆同时出现的是，一些以中低收入人群为客户群体的品牌，近年也有较快发展。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一是拼多多的活跃买家数，今年上半年增加了近1亿人，二季度末达到6.83亿人。谈到消费分化，必须要谈到的一个企业是拼多多，它的崛起速度令人咂舌。尽管现在正逐步向高线城市攻城夺地，但它的客户群体仍然以农村和低线城市为主。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从活跃买家数看，连续五个季度增速在40%左右，有大量的新增买家开始使用拼多多。2019年年末时，拼多多的活跃买家数为5.85亿人，到了今年二季度末的时候就涨到了6.83亿人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  根据拼多多的财报，2020年二季度时，单个活跃买家的年均消费额为1857元，同比增长27%。这个增速远高于社会消费品零售总额的同比增速，以及实物商品网上零售额的同比增速，一部分消费开始被在拼多多上的网购所替代。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  二是名创优品在中国快速发展。如果说拼多多是大众化消费在线上迅猛发展的代表，那么名创优品则能说明，面向大众的线下消费同样发展迅速。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  名创优品2013年进入中国，供应链直接和头部工厂合作，商品单价以10元-20元居多，最高不超高99元。在价格低廉的同时，保证商品的外观和质量，产品流转和和更新周期快，每7天上一次新货。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  低价策略让名创优品迅速扩张。百度地图搜索显示，名创优品全国门店数已达到1898家，其中四个一线城市最新的门店数分别为北京135家、上海124家、广州124家和深圳97家。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一边是高端消费品火爆，一边是面向普通大众的品牌或门店也迅速扩张。这反映了中国出现消费分化的事实，高端的和大众化的品牌，都有自己的市场。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="消费 奢侈品 GDP" src="https://img2.secretchina.com/pic/2019/9-14/p2517341a210821617-ss.jpg" style="height:337px; width:600px"/>
+  滕彪指出，中国没有独立司法体系，执法者说什么，法官就采纳什么，“公检法都是一体的”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -582,7 +382,7 @@
  </center>
  <p>
   <strong>
-   为什么会出现消费分级
+   前次入狱为企业向民间借钱
   </strong>
  </p>
  <center>
@@ -598,7 +398,101 @@
   </div>
  </center>
  <p>
-  消费是人的自主行为，在有消费能力的时候，自然会增加消费，对品质也会有更高的追求。消费分级或者说消费分化，从根源上来讲，就是居民的消费能力出现分层，一部分富裕群体有能力购买更多的奢侈品，而更多的人是去追求性价比，更加偏爱大众化品牌。
+  孙大午上次“入案”是2003年。当时，孙大午的企业要扩大，但是向银行
+  <span href="https://www.secretchina.com/news/gb/tag/借贷" target="_blank">
+   借贷
+  </span>
+  无门，于是，大午集团在2000年1月至2003年5月间，以高于银行同期存款利率的条件，以出具借条方式向当地村民借款共计1.8亿元。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国说，这是受法律保护的民间借贷行为。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不过，孙大午随后被当地公安部门以非法集资的罪名拘捕，他的两个弟弟，大午集团副董事长与总经理，以及财务处长也因涉案被警方扣留。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  该案件经过媒体报导后，关于孙大午是否有罪的讨论，在社会上引发广泛关注，即使在法学界也存在诸多争议。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当时，包括中国官方的新华社、人民日报等，以及美国华盛顿邮报、悉尼先驱导报、法国解放报等国内、国际数十家著名新闻机构，“先后拥进大午集团采访”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  著名的《炎黄春秋》杂志也刊文“再说‘孙大午案’”，其中提到，“中国人民银行徐水县支行”提请徐水县公安局立案侦查大午集团，罪名是“我支行初步认定该公司涉嫌变相吸收公众存款”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  王应国说，孙大午表示不服，因为他出具的是借款欠条，而不是集资票据，这完全不是一回事。王应国说：“而且，借款双方没有任何纠纷，孙大午也按期如约归还。甚至在归还时，村民还希望继续借钱给大午集团，因为回报好，信用也好。但是，孙大午已经不敢再借了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -617,7 +511,7 @@
   </ins>
  </center>
  <p>
-  一些长期的变量，比如储蓄习惯、保障体系不健全等，这里就不讨论了，因为这些长期变量是一致存在的，很难说它们会突然导致消费分级。这篇文章里，我们重点分析短期的变量，包括收入分配和资产差距的扩大，以及低资产人群的负债率更高这三个因素。
+  最后，孙大午被当时的徐水县人民法院以非法吸收公众存款罪，判处有期徒刑3年，缓刑4年，处罚金10万元；大午集团同时也被判处罚金30万元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -632,7 +526,7 @@
   </div>
  </center>
  <p>
-  先来看收入分配差距的扩大。在经济高速增长的时候，各个群体，无论是企业家还是工人，都能搭上时代的列车，分得一杯羹，因为增量的盘子在做大。但是在经济增速放缓后，新增的蛋糕变小了，围绕这部分蛋糕的竞争会变得激烈，结果自然是分化。这种竞争其实就是产生M型社会的根源，富者越富，穷者越穷。
+  在被定罪之前，孙大午已经被关押了五个月。据称，他在那段时间，“看了大约50本书，文史哲方面的，包括15本中国通史和两本英语习题集，几乎翻完了看守所所有能看的书”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -647,7 +541,7 @@
   </div>
  </center>
  <p>
-  衡量收入分配的指标，一是基尼系数。2019年全国居民收入基尼系数还没有公布，最新数据是2018年的，截至2018年，中国居民的基尼系数已经连续3年回升。
+  孙大午那次出狱后接受财经记者张之清专访，认定自己“是个干净的人”，不过称自己可悲可叹，“孤立，不被社会兼容，和大环境不匹配。我明白潜规则，不去适应，依然我行我素，我可以成功，但不会有好下场。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -662,157 +556,7 @@
   </div>
  </center>
  <p>
-  二是居民收入中位数和平均数的比值。在一个收入分配比较均衡的国家或者地区，居民收入的中位数和平均数差距不大。但是在一个收入分配不公平的国家，高收入群体会让很多低收入人群感到“被平均”，中位数和平均数有差距。而且收入分配越不公平，两者的差距越大，即中位数和平均数的比值越小。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我们看到，中国城乡一体化住户调查口径的全国居民可支配收入，中位数和平均数的比值2016年以来整体在不断下滑，反映了收入分配的差距在拉大。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  再来看不同群体持有资产规模差距的扩大。相比于收入分配，资产分布不均等更为严重，富人群体持有的资产比例更高。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一是根据招商银行的私人财富报告，可投资产超过一千万的高净值人群，从2006年的18.1万人，增加到2018年的197万人。这些高净值人群持有的可投资产总规模，从2006年的5.2万亿，提高到2018年的61.0万亿，占全部个人持有的可投资产比例，同期从20.0%上升到32.0%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  二是根据中国央行2020年4月发布的城镇居民家庭资产负债调查结果，2019年中国城镇居民家庭总资产均值为317.9万元，中位数为163.0万元。两者相差154.9万元，表明居民家庭的资产分布不均。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这个调查还显示，资产规模最低的20%家庭，持有的资产仅占全部家庭资产的2.6%，而资产规模最高的20%家庭持有资产占比达到63.0%，其中资产规模最高的10%家庭持有资产占比达到了47.5%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="消费 奢侈品 GDP" src="https://img3.secretchina.com/pic/2020/7-19/p2735753a685411047-ss.jpg" style="height:337px; width:600px"/>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  最后来看债务压力。衡量居民部门的偿债负担，通常喜欢用居民杠杆率，即居民债务余额/GDP，但这个指标没有充分考虑到GDP在各个国家内部不同主体之间的分配，用债务余额/可支配收入更为客观。中国以城乡一体化住户调查口径的居民可支配收入，测算的这一偿债指标，已高于美国、日本和法国。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从这个角度出发，也就不难理解为什么近年中国的消费增速不断下滑了，沉重的债务压力，让中国人不得不变得节省。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从结构的视角来看居民债务，可以发现资产越少的人，债务压力越大。上文提到的中国央行城镇居民家庭资产负债调查结果显示，资产规模越低，有负债家庭的资产负债率越高。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  房贷是中国家庭的主要债务来源，西南财经大学中国家庭金融调查与研究中心的调查显示，2015-2017年新购房有负债的家庭中，收入越低的家庭，债务收入比越高。收入最低的20%家庭债务收入比为13.7，收入最高的20%家庭债务收入比也有1.8，都要比城乡调查口径下的2017年债务收入比1.1更高。
+  王应国告诉美国之音，当年为孙大午辩护的许志永律师已经二度身陷囹圄。孙大午公开对许志永大加赞赏。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -828,7 +572,7 @@
  </center>
  <p>
   <strong>
-   总结
+   孙大午与大午集团
   </strong>
  </p>
  <center>
@@ -844,7 +588,7 @@
   </div>
  </center>
  <p>
-  总结一下，经济增长放缓后，新增的蛋糕变小，围绕这部分蛋糕的竞争加剧，结果自然是收入分化，而财富的分化会比收入分化更大。加上债务压力更集中在低收入和低资产的人群手里，整个社会的消费能力呈现M型。少数富人群体有能力去消费更多的高端消费品和奢侈品，占社会绝大多数的中低收入人群追求性价比，大众化的品牌也能得到青睐，整个社会消费升级和消费降级并存。
+  网评人沅湘称，孙大午出身于郎五庄村农家，所以是农民；他自创企业，有员工9000，毫无疑问也是企业家；他热衷读书、追梦桃花源，用知识份子的情怀，实现了让村民祥和生活在大午城，住得起房子，看得起病，孩子上得起学的梦想，所以他也是知识份子；他通过分设企业监事会(所有权)、董事会(决策权)和理事会(执行权)的“三权分立”，创立了私企立宪、劳资共和的“私有、公治、共享”的新型企业制度，所以，他还是思想家、改革家。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -859,7 +603,7 @@
   </div>
  </center>
  <p>
-  消费分级也有一定的政策含义。常用的物价指标CPI，衡量的主要是大众消费品和服务的价格变化，最近两年受猪肉的影响也很大，CPI反映货币购买力变化的能力是在不断减弱的。
+  《南方周末》记者万静波2003年总结孙大午说：“他本是亿万富翁，却过着苦行僧一般的生活；他本该以追逐利润为第一要务，却办免费农民技校、赔钱的中学；他深知官场潜规则，手中毫无政治资源，却不肯和光同尘。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -874,7 +618,116 @@
   </div>
  </center>
  <p>
-  今年四季度CPI同比会继续走低，核心CPI同比可能已经触底但不会有大的反弹压力。如果只盯着CPI和核心CPI，而忽视了消费分级背景下，一些供给短缺而又符合消费升级方向的商品和服务，比如优质的医疗和教育资源，以及一线城市房产在涨价的事实，可能会误认为货币政策还有很大的宽松空间。货币政策应该从更广义的角度来考虑物价，在防风险、稳增长和治通胀中平衡。
+  律师滕彪说：“孙大午是中国企业家中少有的支持法制人权者。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  刘晓波曾在2003年为孙大午一案撰写长文，称“当局一旦发现孙大午这样的农民企业家的不断壮大，特别是孙大午的企业家良知，既鄙视权钱交易，又有敢于直言的勇气，既有经济资源和组织能力，又从争取农民权利角度提出摆脱贫困的思路，从宪政民主的角度呼吁政治改革，将在政治上对现行体制构成巨大挑战，很可能成为新型的农民领袖，所以当局必然要利用模糊的法律进行整治，于是，孙大午及其大午集团就成为“恶法治国”的受害者。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  大午集团是孙大午1985年以一千只鸡与50头猪起家的。10年后的1995年，大午集团已经跻身中国五百大私营企业的行列。现在，河北大午集团员工九千余人，总部占地5000亩，固定资产二十亿元，年产值超过三十亿元。如今，下辖28家独立子公司、一家合资公司的大午集团，是省级农业产业化经营的重点龙头公司。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有网友分析称，中共认为，
+  <span href="https://www.secretchina.com/news/gb/tag/民营企业" target="_blank">
+   民营企业
+  </span>
+  的发展将会对中共政权安全带来危害，一是民营企业做大后会要求分享政治权力或民主化；二是民营企业可能成为未来颜色革命的推动者。所以，民营企业发展必须受到监控，必须满足政治安全的前提。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  网评人沅湘讽刺说：“要想做事，先学做人，‘欲练此功，必先自宫’，要和别人相同。把自己搞得与众不同，不吃不喝不贪不占不赌，还办医办学不挣钱，这都是不行的。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  滕彪说，任何一个力量如果被认为对其制度和威望造成威胁，中共都会通过各种手段打压下去。前不久被重判的任志强也是这样，虽然他和孙大午的情况不太一样；包括宗教团体、家庭教会、维权人士、民间组织，所有这些给民间带来一定空间、推动中国法制发展的力量，都会被全面打压。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  孙大午一直不隐藏对体制不平等的看法。他2012年为《纽约时报》撰稿、论“中国城镇化要走怎样的道路”时指出，“在农村，八个‘大檐帽’管一个‘破草帽’”，揭示处于中国底层的农村和农民受到政府极度碾压的现实。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  署名“老侯”的网评人士说，尽管政府提倡企业有社会责任感，但那是在党的领导下；一个大午集团一肩扛起当地人的医疗、教育、养老三驾马车，把企业办成了社会，一旦失控导致群起效仿，形成独立的力量，岂不让政府边缘化？不管大午集团与徐水国营农场的土地纠纷如何处理，“政府一定会借东风，一揽子解决大午在当地的社会影响问题”；脱离基层政府的民营“都有可能构成对国家安全的威胁”。总之，“做党的孩子，是大午集团的唯一出路，也是所有民企的唯一出路”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -906,7 +759,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -938,13 +791,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947416.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947416.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947416.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/27/947416.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953054.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953054.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/953054.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/19/953054.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947416.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/953054.md' width='0px' height='0px'/>
